# opencv_2_ffmpeg_av

./: CMakeLists.txt  README.md  av_settings.cfg  main.cpp  readme.md
cam_lib/: CMakeLists.txt  cam_capture.cpp  cam_capture.h  cam_exception.cpp  cam_exception.h  common.h  configs.h  ffmpg_mux.cpp  ffmpg_mux.h
logger/: CMakeLists.txt  logger.c  logger.h
